# Introduction_to_AI_class

./: .gitignore
indicators/: .gitignore
src/IAI2025_1/: IAI2025_1.cpp  README.md  eightFigurePuzzles.cpp  eightFigurePuzzles.h  eightFigurePuzzlesFramework.cpp  output.csv  plot_output.ipynb  processed_output.csv  ~$实验报告1.docx
src/IAI2025_2/: CMakeLists.txt  Csp.cpp  Csp.h  MemoryMonitor.cpp  MemoryMonitor.h  Queen.cpp  Queen.h  data_analysis.ipynb  inference.h  main.cpp  relation.h  search.cpp  search.h
src/IAI2025_2/data/: backtrack_detailed_results.csv  backtrack_summary.csv  minconflict_detailed_results.csv  minconflict_summary.csv
src/IAI2025_3/: CMakeLists.txt  Dataset.cpp  Dataset.h  DecisionTree.cpp  DecisionTree.h  Example.h  README.md  TreeNode.h  main.cpp  util.cpp  util.h
src/IAI2025_3/dataset/: README.md
workspace/: IAI2025_Workspace.code-workspace
